--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Data Report</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-<h1>Welcome to Data Report Web Application</h1>
-<p>
-    Data Report scrape data from the webpages and store them into different
-    files.
-</p>
+<div class="container-lg bg-danger text-white p-3">
+    <h1>Welcome to Data Report Web Application</h1>
+    <p>
+        Data Report scrape data from the webpages and store them into different
+        files.
+    </p>
+</div>
 </body>
 </html>
