--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -6,9 +6,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
-<div class="container-lg bg-danger text-white p-3">
+<div class="container-fluid bg-secondary text-white p-3 text-center">
     <h1>Welcome to Data Report Web Application</h1>
     <p>
         Data Report scrape data from the webpages and store them into different
