--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -103,76 +103,6 @@
 </div>
 
 <script src="../static/js/dataElement.js"></script>
-<script>
-    const hasParentCheck = document.querySelector("#has-parent");
-    const parentSelectionArea = document.querySelector("#parent-selection");
-    const addElementBtn = document.querySelector("#add-element-btn")
-    const removeElementBtn = document.querySelector(".remove-element-btn");
-    const generateReportBtn = document.querySelector("#generate-report-btn")
-    const htmlElementsSection = document.querySelector("#html-element-section");
-
-    hasParentCheck.addEventListener("click", (e) => {
-        const isChecked = e.target.checked;
-
-        if (isChecked) {
-            parentSelectionArea.classList.remove("d-none");
-            populateParentElementSelection();
-        } else {
-            parentSelectionArea.classList.add('d-none');
-        }
-    });
-
-    function populateParentElementSelection() {
-        const parentSelect = parentSelectionArea.lastElementChild;
-        clearParentElementSelection();
-
-        const notSetOption = document.createElement("option");
-        notSetOption.textContent = "NOT SET";
-        parentSelect.appendChild(notSetOption);
-
-        const htmlElements = htmlElementsSection.children;
-        if (htmlElements.length === 0) {
-            return;
-        }
-
-        for (const element of htmlElements) {
-            const parentOption = document.createElement("option");
-            parentOption.textContent = element.firstChild.childNodes[0].nodeValue;
-
-            parentSelect.appendChild(parentOption);
-        }
-    }
-
-    function clearParentElementSelection() {
-        const childrenSelect = parentSelectionArea.lastElementChild;
-        let first = childrenSelect.firstChild
-        while (first) {
-            first.remove();
-            first = childrenSelect.firstChild;
-        }
-    }
-
-    addElementBtn.addEventListener("click", () => {
-        const elementName = document.querySelector("#data-element-name").value;
-        const elementSelector = document.querySelector("#data-element-selector").value;
-
-        const dataElement = new DataElement(elementName, elementSelector);
-        const htmlElement = dataElement.constructElement();
-
-        htmlElementsSection.appendChild(htmlElement);
-    })
-
-    htmlElementsSection.addEventListener("click", (e) => {
-        if(e.target.textContent === "Remove") {
-            const parentElement = e.target.parentElement.parentElement;
-            parentElement.remove();
-        }
-    })
-
-    generateReportBtn.addEventListener("click", (e) => {
-        console.log(e);
-    })
-
-</script>
+<script src="../static/js/app.js"></script>
 </body>
 </html>
