--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -31,45 +31,58 @@
     <div class="border border-2 border-light-subtle bg-white shadow-lg p-3">
         <h1>File properties</h1>
         <div class="mt-5 d-flex flex-column">
-            <label class="fs-5 mb-2">Title</label>
-            <input type="text" class="form-control" name="title of config file"
-                   aria-describedby="title" placeholder="Enter title">
+            <label class="fs-5 mb-2">
+                Title
+                <input aria-describedby="title" class="form-control" name="title of config file"
+                       placeholder="Enter title" type="text">
+            </label>
         </div>
 
         <div class="mt-4 d-flex flex-column">
-            <label class="fs-5 mb-2">Description</label>
-            <textarea class="form-control" name="description of config file" rows="3"
-                      aria-describedby="description" placeholder="Enter description"></textarea>
+            <label class="fs-5 mb-2">
+                Description
+                <textarea aria-describedby="description" class="form-control" name="description of config file"
+                          placeholder="Enter description" rows="3"></textarea>
+            </label>
         </div>
 
         <div class="mt-4 d-flex flex-column">
-            <label class="fs-5 mb-2">File Type</label>
-            <select class="form-control" name="file type">
-                <option>Not Set</option>
-                <option>Excel</option>
-            </select>
+            <label class="fs-5 mb-2">
+                File Type
+                <select class="form-control" name="file type">
+                    <option>Not Set</option>
+                    <option>Excel</option>
+                </select>
+            </label>
         </div>
 
         <div class="mt-4 d-flex flex-column">
-            <label class="fs-5 mb-2">File Extension</label>
-            <select class="form-control" name="file extension">
-                <option>Not Set</option>
-                <option>.xlsx</option>
-            </select>
+            <label class="fs-5 mb-2">
+                File Extension
+                <select class="form-control" name="file extension">
+                    <option>Not Set</option>
+                    <option>.xlsx</option>
+                </select>
+            </label>
         </div>
     </div>
     <div class="border border-2 border-light-subtle bg-white shadow-lg p-3" id="data-prop-section">
         <h1>Data Properties</h1>
         <div class="mt-4 d-flex flex-column">
-            <label class="fs-5 mb-2">Name</label>
-            <input type="text" class="form-control" name="name of data element" id="data-element-name"
-                   aria-describedby="name" placeholder="Enter name of data element">
+            <label class="fs-5 mb-2">
+                Name
+                <input aria-describedby="name" class="form-control" id="data-element-name" name="name of data element"
+                       placeholder="Enter name of data element" type="text">
+            </label>
         </div>
 
         <div class="mt-4 d-flex flex-column">
-            <label class="fs-5 mb-2">CSS Selector</label>
-            <input type="text" class="form-control" name="selector of data element" id="data-element-selector"
-                   aria-describedby="selector" placeholder="Enter CSS selector">
+            <label class="fs-5 mb-2">
+                CSS Selector
+                <input aria-describedby="selector" class="form-control" id="data-element-selector"
+                       name="selector of data element"
+                       placeholder="Enter CSS selector" type="text">
+            </label>
         </div>
 
         <div class="mt-4 form-group form-check">
@@ -78,23 +91,27 @@
         </div>
 
         <div class="mt-4 d-flex flex-column d-none" id="parent-selection">
-            <label class="fs-5 mb-2">Parent</label>
-            <select class="form-control" name="file extension">
-                <option>Not Set</option>
-            </select>
+            <label class="fs-5 mb-2">
+                Parent
+                <select class="form-control" name="file extension">
+                    <option>Not Set</option>
+                </select>
+            </label>
         </div>
         <div class="float-end mt-4">
             <button class="btn btn-success" id="add-element-btn">Add element</button>
         </div>
     </div>
     <div class="border border-2 border-light-subtle bg-white shadow-lg p-3" style="max-height: 650px;">
-        <h1>HTML Elements</h1>
+        <h1>Data Elements</h1>
         <div class="mt-2 d-flex flex-column">
-            <label class="fs-5 mb-2">URL</label>
-            <input type="text" class="form-control" name="url of page" id="url"
-                   aria-describedby="URL" placeholder="Enter URL">
+            <label class="fs-5 mb-2">
+                URL
+                <input aria-describedby="URL" class="form-control" id="url" name="url of page"
+                       placeholder="Enter URL" type="text">
+            </label>
         </div>
-        <div class="overflow-auto mt-3" style="max-height: 400px;" id="html-element-section">
+        <div class="overflow-auto mt-3" id="data-elements-section" style="max-height: 400px;">
         </div>
         <div class="float-end mt-4">
             <button class="btn btn-success" id="generate-report-btn">Generate Report</button>
