--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -119,8 +119,8 @@
     </div>
 </div>
 
-<script src="../static/js/dataElement.js"></script>
-<script src="../static/js/configFile.js"></script>
-<script src="../static/js/app.js"></script>
+<script th:src="@{js/dataElement.js}"></script>
+<script th:src="@{js/configFile.js}"></script>
+<script th:src="@{js/app.js}"></script>
 </body>
 </html>
