Fix file extension problem

--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
                 File Extension
                 <select class="form-control" id="fileExtension">
                     <option>Not Set</option>
-                    <option>.xlsx</option>
+                    <option>xlsx</option>
                 </select>
             </label>
         </div>
