--- a/data-report-web/src/main/resources/templates/result.html
+++ b/data-report-web/src/main/resources/templates/result.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Result</title>
-
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" rel="stylesheet">
-
     <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css">
     <style>
         .remove-element-btn {
@@ -28,7 +26,8 @@
 </div>
 
 <div class="mt-md-5 border border-danger border-2 p-5">
-    <form class="d-flex align-items-center justify-content-center flex-column">
+    <form action="#" class="d-flex align-items-center justify-content-center flex-column" method="get"
+          th:action="@{/download/file}">
         <h1 class="mb-3">Your file is ready to download</h1>
         <button class="btn btn-success">Download File</button>
     </form>
