--- a/data-report-web/src/main/resources/templates/index.html
+++ b/data-report-web/src/main/resources/templates/index.html
@@ -27,6 +27,11 @@
     </p>
 </div>
 
+<!--href="redirect/to/test"-->
+<!--<a onclick="redirectToTest()">
+    <button class="btn btn-danger">Click me</button>
+</a>-->
+
 <div class="row-cols-3 d-flex align-content-start justify-content-center mt-5 p-3 gap-2">
     <div class="border border-2 border-light-subtle bg-white shadow-lg p-3">
         <h1>File properties</h1>
@@ -122,5 +127,18 @@
 <script th:src="@{js/dataElement.js}"></script>
 <script th:src="@{js/configFile.js}"></script>
 <script th:src="@{js/app.js}"></script>
+<!--
+<script>
+    function redirectToTest() {
+        console.log("here...")
+        fetch("redirect/to/test")
+            .then(res => {
+                console.log(res)
+                if (res?.url) {
+                    window.location = res.url;
+                }
+            })
+    }
+</script>-->
 </body>
 </html>
