--- a/data-report-web/src/main/resources/templates/result.html
+++ b/data-report-web/src/main/resources/templates/result.html
@@ -26,15 +26,15 @@
 </div>
 
 <div class="mt-md-5 border border-danger border-2 p-5">
-    <form action="#" class="d-flex align-items-center justify-content-center flex-column" method="get"
+    <form class="d-flex align-items-center justify-content-center flex-column" method="get"
           th:action="@{/download/file}">
         <h1 class="mb-3">Your file is ready to download</h1>
         <button class="btn btn-success">Download File</button>
     </form>
 </div>
 
-<script th:src="@{js/dataElement.js}"></script>
-<script th:src="@{js/configFile.js}"></script>
-<script th:src="@{js/app.js}"></script>
+<script src="../static/js/dataElement.js"></script>
+<script src="../static/js/configFile.js"></script>
+<script src="../static/js/app.js"></script>
 </body>
 </html>
