Change api endpoints of ReportFileController

--- a/data-report-web/src/main/resources/templates/result.html
+++ b/data-report-web/src/main/resources/templates/result.html
@@ -27,7 +27,7 @@
 
 <div class="mt-md-5 border border-danger border-2 p-5">
     <form class="d-flex align-items-center justify-content-center flex-column" method="get"
-          th:action="@{/download/file}">
+          th:action="@{/reportFile/download}">
         <h1 class="mb-3">Your file is ready to download</h1>
         <button class="btn btn-success">Download File</button>
     </form>
