--- a/data-report-web/src/main/resources/templates/result.html
+++ b/data-report-web/src/main/resources/templates/result.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body class="d-flex align-items-center justify-content-center flex-column">
+<body class="d-flex align-items-center justify-content-center flex-dataColumn">
 <div class="container-fluid bg-secondary text-white p-3 text-center">
     <h1>Welcome to Data Report Web Application</h1>
     <p>
@@ -26,7 +26,7 @@
 </div>
 
 <div class="mt-md-5 border border-danger border-2 p-5">
-    <form class="d-flex align-items-center justify-content-center flex-column" method="get"
+    <form class="d-flex align-items-center justify-content-center flex-dataColumn" method="get"
           th:action="@{/reportFile/download}">
         <h1 class="mb-3">Your file is ready to download</h1>
         <button class="btn btn-success">Download File</button>
